fix: add outline navigation expend and collapse feature

--- a/blocks/navigation/outline/style.less
+++ b/blocks/navigation/outline/style.less
@@ -3,7 +3,7 @@
     overflow-y: overlay;
 
     &-line {
-        border-left: 2px solid rgba(55, 53, 47, 0.08);
+        border-left: 3px solid rgba(55, 53, 47, 0.08);
     }
 
     .item {
@@ -13,15 +13,15 @@
         font-size  : 14px;
         font-weight: bold;
 
-        transform  : translate(-2px, 0px);
-        border-left: 2px solid transparent;
+        transform  : translate(-3px, 0px);
+        border-left: 3px solid transparent;
 
         a {
             color          : rgba(55, 53, 47, 1);
             border-radius  : 4px;
             cursor         : pointer;
             padding        : 0px 10px;
-            margin-left    : 10px;
+            // margin-left    : 10px;
             line-height    : 30px;
             height         : 30px;
             text-overflow  : ellipsis;
@@ -37,7 +37,7 @@
                 font-weight     : bold;
             }
 
-            border-left : 2px solid rgba(255, 0, 0, .6);
+            border-left :3px solid rgba(255, 0, 0, .6);
         }
 
         &:hover {
